# rustrc

./: README.md  SUMMARY.md
docs/: .bookignore  index.html  lifycle.md  search_index.json
docs/markdown/: ds.html  poc.md  wip.html
exercise/_args/src/: main.rs
exercise/_bigint/: Cargo.toml
exercise/_bytes/: README.md
exercise/_clap/: Cargo.toml
exercise/_enums/: Cargo.toml  README.md
exercise/_fs/: Cargo.toml  foo
exercise/_lifecircle/: Cargo.toml
exercise/_mut_self/: Cargo.toml
exercise/_self/: Cargo.toml
exercise/_some/: Cargo.toml
exercise/_str_string/: Cargo.toml
exercise/_traits/: Cargo.toml
exercise/cmd/: Cargo.toml
exercise/func/: Cargo.toml
getting-started/: Cargo.toml~
getting_started/src/: main.rs
guessing_game/: Cargo.toml  README.md
implement/_args/: Cargo.toml
implement/_asmut/: Cargo.toml
implement/_bytes/: Cargo.toml
implement/_clap/: Cargo.toml
implement/_doc/: Cargo.toml
implement/_lifecircle/: README.md
implement/_match/: Cargo.toml
implement/_p2p/: Cargo.toml  behaviour.rs  handler.rs  mod.rs  protocol.rs
implement/_rpc/: Cargo.toml
implement/_sheath/: Cargo.toml
implement/_sheath/sheath/: main.rs
implement/_signature/: Cargo.toml
implement/_tcp/: Cargo.toml
implement/_traits/: README.md
implement/machine/: Cargo.toml
markdown/: ds.md  poc.md  wip.md
repos/: Cargo.toml
src/attributes/: Cargo.toml
src/crates_and_modules/: Cargo.toml
src/guessing_game/: README.md
src/lifecircle/: Cargo.toml
src/ownership/: Cargo.toml
src/syntax_semantics/: Cargo.toml
src/types/: Cargo.toml
(+70 files in other folders)
